--- a/tutorindigo/templates/indigo/lms/static/sass/views/_wiki.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/views/_wiki.scss
@@ -11,3 +11,13 @@
     }
   }
 }
+
+.open-response-assessment {
+  line-height: 1.3;
+}
+
+.open-response-assessment-summary,
+.open-response-assessment-main-table {
+  max-width: 100%;
+  overflow-x: auto;
+}
